# Relm4

./: .gitignore  .recent_files  CHANGES.md  Cargo.toml  README.md  flake.nix  icons.toml  publish.sh  rustfmt.toml  shell.nix
examples/: Cargo.toml  README.md  actions.rs  application.rs  application_async.rs  async_worker.rs  components.rs  conditional_properties.rs  conditional_root.rs  data_binding.rs  drag_and_drop.rs  drawing.rs  drop_sub_components.rs  embedded_logo.rs  entry.rs  external_view.rs  factory.rs  factory_async.rs  factory_builder.rs  factory_hash_map.rs  future.rs  generator.rs  grid_factory.rs  grid_generator.rs  icons.rs  leaflet_sidebar.rs  list_view_wrapper.rs  log.rs  macro_reference.rs  menu.rs  menu_actions_and_settings.rs  menu_and_safeties.rs  message_broker.rs  message_from_grid_view.rs  message_stream.rs  multi_window.rs  navigation_splitview_with_stack.rs  non_blocking_async.rs  non_blocking_sync.rs  open_file.rs  (+26 more)
examples/icons/: Cargo.toml  build.rs
examples/icons/src/: main.rs
examples/libadwaita/: Cargo.toml  leaflet_sidebar.rs  tab_factory.rs  tab_game.rs  toast.rs
examples/relm4-components/: Cargo.toml  alert.rs  file_dialogs.rs  open_button.rs
examples/view/: simple_view.rs
relm4/: Cargo.toml
relm4-components/: Cargo.toml  README.md
relm4-components/examples/: .gitignore  adw_combo_row.rs  alert.rs  combo_box.rs  file_dialogs.rs  open_button.rs  web_image.rs
relm4-components/src/: alert.rs  lib.rs  open_dialog.rs  save_dialog.rs  simple_adw_combo_row.rs  simple_combo_box.rs  traits.rs  vec_combo_box.rs  web_image.rs
relm4-components/src/alert/: mod.rs  style.css
relm4-components/src/open_button/: factory.rs  mod.rs
relm4-css/: Cargo.toml  README.md  build.rs
relm4-css/src/: lib.rs
relm4-examples/: Cargo.toml  README.md
relm4-examples/examples/: actions.rs  alert.rs  calc-trainer.rs  components.rs  components_old.rs  drawing.rs  entry.rs  entry_tracker.rs  factory.rs  factory_advanced.rs  factory_advanced_manual.rs  factory_manual.rs  future.rs  generator.rs  grid_factory.rs  grid_generator.rs  list.rs  macro.rs  macro_reference.rs  macro_test.rs  menu.rs  micro_components.rs  micro_components_manual.rs  non_blocking_async.rs  non_blocking_async_manual.rs  open_button.rs  popover.rs  relm4_actions.rs  save_dialog.rs  simple.rs  simple_manual.rs  simple_override_relm4.rs  stack.rs  stack_factory.rs  stack_switcher.rs  stateful_msg_handler.rs  to_do.rs  tokio.rs  tracker.rs
relm4-examples/libadwaita/: Cargo.toml
relm4-examples/libadwaita/examples/: advent_calendar.rs  calc-trainer.rs  divide_with_remainer.rs  leaflet.rs  simple.rs  sudoku_solver.rs  view-switcher.rs
relm4-macros/: Cargo.toml  README.md
relm4-macros/relm4-format/: Cargo.toml  README.md
relm4-macros/relm4-format/src/: main.rs
relm4-macros/relm4-macros-internal/: Cargo.toml
relm4-macros/relm4-macros-internal/src/: additional_fields.rs  attrs.rs  lib.rs  token_streams.rs  util.rs  visitors.rs
relm4-macros/src/: additional_fields.rs  args.rs  attrs.rs  component.rs  factory.rs  funcs.rs  generic_types.rs  item_impl.rs  lib.rs  macros.rs  struct_field.rs  token_streams.rs  types.rs  util.rs  view.rs  visitors.rs  widget_template.rs  widgets.rs
relm4-macros/src/component/: funcs.rs  inject_view_code.rs  mod.rs  token_streams.rs  types.rs
relm4-macros/src/derive_components/: mod.rs
relm4-macros/src/factory/: funcs.rs  inject_view_code.rs  mod.rs  types.rs
relm4-macros/src/factory_prototype/: mod.rs
relm4-macros/src/factory_prototype_macro/: funcs.rs  mod.rs  token_streams.rs  types.rs
relm4-macros/src/menu/: codegen.rs  gen.rs  mod.rs  parse.rs
relm4-macros/src/micro_widget_macro/: funcs.rs  mod.rs  model_types.rs  token_streams.rs
relm4-macros/src/widget_macro/: funcs.rs  mod.rs  model_types.rs  token_streams.rs
relm4-macros/src/widgets/: gen.rs  mod.rs  parse.rs  parse_util.rs  util.rs
relm4-macros/tests/: builder.rs  codegen_order.rs  complex_func_path.rs  component_missing_widgets.rs  conditional_root.rs  iife.rs  local_ref_container.rs  pub_widget_templates.rs  redundant_clone.rs  returned_widgets.rs  simple.rs  skip_init.rs  widget_template.rs  widget_template_nested_child.rs
relm4-macros/tests/compile-fail/: bad_impl.stderr  component-empty.rs  component-empty.stderr  dead_code.rs  dead_code.stderr  factory-component-empty.stderr  missing-view.rs  missing-view.stderr  no-view-output.rs  no-view-output.stderr  pre-view-return.rs  pre-view-return.stderr
relm4/benches/: stress_test.rs
relm4/src/: app.rs  channel.rs  drawing.rs  global_widgets.rs  late_initialization.rs  lib.rs  list_item_wrapper.rs  loading_widgets.rs  macro_helper.rs  prelude.rs  runtime_util.rs  safeties.rs  sender.rs  shared_state.rs  temp_widgets.rs  worker.rs
relm4/src/abstractions/: drawing.rs  mod.rs  toaster.rs
relm4/src/actions/: mod.rs  traits.rs
relm4/src/async_component/: builder.rs  connector.rs  controller.rs  destroy_on_drop.rs  mod.rs  state_watcher.rs
relm4/src/binding/: bindings.rs  mod.rs  widgets.rs
relm4/src/channel/: component.rs  mod.rs
relm4/src/component/: builder.rs  burner.rs  connector.rs  controller.rs  message_broker.rs  mod.rs  runtime_util.rs  sender.rs  shutdown_on_drop.rs  state_watcher.rs  stream.rs  traits.rs  worker.rs
relm4/src/extensions/: container.rs  iter_children.rs  mod.rs  object_ext.rs  removable.rs  remove.rs  set_child.rs  tests.rs  widget_ext.rs
relm4/src/factory/: builder.rs  component_storage.rs  data_guard.rs  dynamic_index.rs  handle.rs  mod.rs  old_mod.rs  positions.rs  runtime_dropper.rs  traits.rs
relm4/src/list_view_wrapper/: any_wrapper.rs  list_item_wrapper.rs  mod.rs  relm_selection_ext.rs
relm4/src/safe_settings_and_actions/: extensions.rs  mod.rs
relm4/src/shared_state/: async_reducer.rs  mod.rs  reducer.rs  state.rs
relm4/src/shutdown/: attached.rs  mod.rs  receiver.rs  sender.rs
relm4/src/typed_list_view/: column_view.rs  mod.rs
relm4/src/typed_view/: column.rs  grid.rs  iterator.rs  list.rs  mod.rs  (+1 more)
relm4/tests/: drop_after_quit.rs  shutdown_after_quit.rs
(+212 files in other folders)
