[workspace]
resolver = "2"
members = ["relm4", "relm4-components", "relm4-css", "relm4-macros"]
exclude = ["examples", "examples/libadwaita"]

[workspace.package]
version = "0.9.1"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "An idiomatic GUI library inspired by Elm and based on gtk4-rs"

homepage = "https://relm4.org"
repository = "https://github.com/Relm4/Relm4"

keywords = ["gui", "gtk", "gtk4", "elm"]
categories = ["gui"]
