[workspace]
resolver = "3"
members = [
    "examples/icons",
    "relm4",
    "relm4-components",
    "relm4-css",
    "relm4-macros",
]
exclude = ["examples", "examples/libadwaita"]

[workspace.package]
version = "0.10.0"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2024"
rust-version = "1.91"
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "An idiomatic GUI library inspired by Elm and based on gtk4-rs"

homepage = "https://relm4.org"
repository = "https://github.com/Relm4/Relm4"

keywords = ["gui", "gtk", "gtk4", "elm"]
categories = ["gui"]

[workspace.dependencies]
relm4 = { path = "./relm4", default-features = false }
relm4-css = { version = "0.10.0", path = "./relm4-css" }
relm4-macros = { version = "0.10.0", path = "./relm4-macros" }
relm4-icons = "0.10.0"

adw = { version = "0.8", package = "libadwaita" }
flume = "0.11.1"
futures = "0.3.31"
fragile = "2.0.1"
gtk = { version = "0.10", package = "gtk4" }
once_cell = "1.21"
panel = { version = "0.6", package = "libpanel" }
tokio = { version = "1.47" }
tracing = "0.1.43"
reqwest = "0.12.23"
tracker = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# dev-dependencies
relm4-components = { path = "./relm4-components" }

criterion = { version = "0.7", default-features = false }
rand = "0.9.2"
tracing-subscriber = "0.3.21"
serde = "1"
serde_json = "1"
rustversion = "1"
trybuild = "1.0.114"

# build-dependencies
relm4-icons-build = "0.10.0"
