[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
relm4 = { path = "../relm4", features = ["macros"] }
tokio = { version = "1.15", features = ["rt", "macros", "time", "rt-multi-thread"] }
futures = "0.3.19"
rand = "0.8.5"
tracker = "0.1"

# log example
tracing = "0.1.35"
tracing-subscriber = "0.3.15"

[[example]]
name = "simple"
path = "simple.rs"

[[example]]
name = "simple_manual"
path = "simple_manual.rs"

[[example]]
name = "factory"
path = "factory.rs"

[[example]]
name = "grid_factory"
path = "grid_factory.rs"

[[example]]
name = "settings_list"
path = "settings_list.rs"

[[example]]
name = "progress"
path = "progress.rs"

[[example]]
name = "macro_reference"
path = "macro_reference.rs"

[[example]]
name = "non_blocking_async"
path = "non_blocking_async.rs"

[[example]]
name = "menu"
path = "menu.rs"

[[example]]
name = "components"
path = "components.rs"
required-features = ["relm4/libadwaita"]

[[example]]
name = "log"
path = "log.rs"

[[example]]
name = "worker"
path = "worker.rs"

[[example]]
name = "tracker"
path = "tracker.rs"

[[example]]
name = "to_do"
path = "to_do.rs"

[[example]]
name = "drawing"
path = "drawing.rs"
