[package]
name = "relm4-examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
relm4 = { path = "../relm4", features = ["macros"] }
tokio = { version = "1.20", features = ["rt", "macros", "time", "rt-multi-thread"] }
async-std = "1"
futures = "0.3.21"
rand = "0.8.5"
tracker = "0.1"
reqwest = "0.11.12"

# log example
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[[example]]
name = "simple"
path = "simple.rs"

[[example]]
name = "simple_manual"
path = "simple_manual.rs"

[[example]]
name = "simple_async"
path = "simple_async.rs"

[[example]]
name = "factory"
path = "factory.rs"

[[example]]
name = "grid_factory"
path = "grid_factory.rs"

[[example]]
name = "settings_list"
path = "settings_list.rs"

[[example]]
name = "progress"
path = "progress.rs"

[[example]]
name = "macro_reference"
path = "macro_reference.rs"

[[example]]
name = "non_blocking_async"
path = "non_blocking_async.rs"

[[example]]
name = "menu"
path = "menu.rs"

[[example]]
name = "components"
path = "components.rs"
required-features = ["relm4/libadwaita"]

[[example]]
name = "log"
path = "log.rs"

[[example]]
name = "worker"
path = "worker.rs"

[[example]]
name = "tracker"
path = "tracker.rs"

[[example]]
name = "to_do"
path = "to_do.rs"

[[example]]
name = "drawing"
path = "drawing.rs"

[[example]]
name = "message_broker"
path = "message_broker.rs"

[[example]]
name = "transient_dialog"
path = "transient_dialog.rs"

[[example]]
name = "actions"
path = "actions.rs"

[[example]]
name = "entry"
path = "entry.rs"

[[example]]
name = "popover"
path = "popover.rs"

[[example]]
name = "widget_template"
path = "widget_template.rs"

[[example]]
name = "message_stream"
path = "message_stream.rs"
