[package]
name = "relm4-examples"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2018"
version = "0.1.0-beta.1"
description = "An idiomatic GUI library inspired by Elm and based on gtk4-rs"
repository = "https://github.com/AaronErhardt/relm4"
readme = "README.md"
license = "LGPL-3.0-or-later"

keywords = ["gui", "gtk", "gtk4"]
categories = ["gui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bytes = "1"
gtk = { version = "0.2", package = "gtk4" }
once_cell = "1.8"
reqwest = "0.11"
tracker = "0.1"
surf = "2.2"
tokio = { version = "1.9", features = ["rt", "macros", "time"] }

relm4 = { path = "..", features = ["tokio-rt"] }
relm4-macros = { path = "../relm4-macros" }
relm4-components = { path = "../relm4-components" }
