[package]
name = "relm4-examples"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2021"
version = "0.4.0-beta.3"
description = "An idiomatic GUI library inspired by Elm and based on gtk4-rs"
repository = "https://github.com/AaronErhardt/relm4"
readme = "README.md"
license = "MIT"

keywords = ["gui", "gtk", "gtk4"]
categories = ["gui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bytes = "1"
once_cell = "1.9"
rand = "0.8"
relm4 = { path = "../", features = ["tokio-rt"] }
relm4-components = { path = "../relm4-components" }
relm4-macros = { path = "../relm4-macros" }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
surf = { version = "2.3", features = ["h1-client-rustls"], default-features = false }
tokio = { version = "1.15", features = ["rt", "macros", "time", "rt-multi-thread"] }
tracker = "0.1"
