[package]
name = "relm4-macros"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2021"
rust-version = "1.56"
version = "0.5.0-beta.1"
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "An idiomatic GUI library inspired by Elm and based on gtk4-rs"

homepage = "https://relm4.org"
repository = "https://github.com/AaronErhardt/relm4"
documentation = "https://relm4.org/docs/stable/relm4/"

[lib]
proc-macro = true

[features]
default = ["relm4"]

# Without the default "relm4" feature, all imports of gtk will
# be `use gtk;` instread of `use relm4::gtk;` thus making it 
# easier to use this crate without Relm4.
relm4 = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
relm4 = { path = "../relm4" }
trybuild = "1.0.63"
