[package]
name = "relm4-macros"
readme = "README.md"
keywords = ["gui", "gtk", "gtk4", "elm", "view"]
documentation = "https://docs.rs/relm4_macros/"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

homepage.workspace = true
repository.workspace = true

categories.workspace = true

[lib]
proc-macro = true

[features]
default = ["relm4"]

# Without the default "relm4" feature, all imports of gtk will
# be `use gtk;` instead of `use relm4::gtk;` thus making it 
# easier to use this crate without Relm4.
relm4 = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }

[dev-dependencies]
relm4 = { path = "../relm4" }
rustversion = "1"
trybuild = "1.0.89"
