[package]
name = "icons"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
relm4-icons = "0.10.0"
relm4 = { path = "../../relm4" }

[build-dependencies]
relm4-icons-build = "0.10.0"
