[package]
name = "icons"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
relm4-icons.workspace = true
relm4 = { workspace = true, default-features = true }

[build-dependencies]
relm4-icons-build.workspace = true
