[package]
name = "libadwaita-examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
rand = "0.8.5"
relm4 = { path = "../../relm4", features = ["libadwaita"] }
tokio = { version = "1.25", features = ["time"] }

[[example]]
name = "leaflet_sidebar"
path = "leaflet_sidebar.rs"

[[example]]
name = "tab_factory"
path = "tab_factory.rs"

[[example]]
name = "tab_game"
path = "tab_game.rs"
