[package]
name = "relm4-examples-libadwaita"
version = "0.4.0-beta.3"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
#relm4 = { path = "../../", features = ["libadwaita"] }
relm4-components = { path = "../../relm4-components" }
relm4-macros = { path = "../../relm4-macros" }
rand = "0.8.4"
