[package]
name = "relm4-examples-libadwaita"
version = "0.4.0-beta.3"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
relm4 = { path = "../../", features = ["libadwaita", "macros"] }
relm4-components = { path = "../../relm4-components" }
rand = "0.8.4"
