[package]
name = "relm4-format"
keywords = ["gui", "gtk", "gtk4", "elm", "view"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

homepage.workspace = true
repository.workspace = true

categories.workspace = true

[dependencies]
internal = { path = "../relm4-macros-internal", package = "relm4-macros-internal", features = ["format"] }
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }