[package]
name = "relm4-macros-internal"
readme = "../README.md"

documentation = "https://relm4.org/docs/stable/relm4/"

keywords = ["gui", "gtk", "gtk4", "elm", "view"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

homepage.workspace = true
repository.workspace = true

categories.workspace = true

[features]
default = ["relm4"]

# Generate code for generating formatted output of the 
# widget macro syntax.
format = ["base64"]

# Without the default "relm4" feature, all imports of gtk will
# be `use gtk;` instead of `use relm4::gtk;` thus making it 
# easier to use this crate without Relm4.
relm4 = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
base64 = { version = "0.21", optional = true }